--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>RunSmart</title>
-	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/fonts_icon.css">
+	<!-- <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="css/fonts.css"> -->
 	<!-- <link rel="stylesheet" href="css/slick.css"> -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css"> -->
 	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"> -->
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -702,7 +701,7 @@
 		<div class="container">
 			<h2 class="title">отзывы клиентов</h2>
 			<div class="reviews__wrapper">
-				<div class="reviews-item animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
+				<div class="reviews-item fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
 					<img src="img/reviews/1_1.jpg" alt="reviews" class="reviews-item__img">
 					<div>
 						<div class="reviews-item__title">Ирина Иванченко</div>
@@ -714,7 +713,7 @@
 					</div>
 				</div>
 
-				<div class="reviews-item animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
+				<div class="reviews-item fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
 					<img src="img/reviews/2_1.jpg" alt="reviews" class="reviews-item__img">
 					<div>
 						<div class="reviews-item__title">Иван Сёмочкин</div>
@@ -725,7 +724,7 @@
 					</div>
 				</div>
 
-				<div class="reviews-item animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
+				<div class="reviews-item fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
 					<img src="img/reviews/3_1.jpg" alt="reviews" class="reviews-item__img">
 					<div>
 						<div class="reviews-item__title">Юлия Дашкина</div>
@@ -794,11 +793,11 @@
 	<!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/slick.min.js"></script> slic-slider -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script> <!-- tiny-slider -->
 	<!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script> за допомогою будстрепа -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script> <!-- tiny-slider -->
 	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/wow.min.js"></script>
